#154: Modified CreateFilterKind UC to utilize FilterKindLogic